# pyfastic

./: .dockerignore  .env-sample  .gitignore  Dockerfile  README.md  alembic.ini  db_test.py  docker-compose.yml  pyproject.toml  small_book.md  translation_test.py
docs/: alembic.md  folderstructure.md
postgres/: init.sql
production/: Dockerfile
src/pyfastic/: __init__.py  celery_app.py  config.py  database.py  dependencies.py  main.py  tasks.py
src/pyfastic/api/: crud.py  images.py  loras.py  translations.py
src/pyfastic/migrations/: env.py
src/pyfastic/migrations/versions/: 53460a4577b1_datetime_image_types_aangepast.py  5b6554974424_datetime_types_aangepast.py  79611ea96651_models_aangepast_voor_pivot_table.py  b3032cba2cfc_initial.py  cc5389363fd5_datetime_types_aangepast.py  fb4d005a94f8_datetime_types_aangepast.py
src/pyfastic/models/: __init__.py  image.py  imageloralink.py  lora.py
src/pyfastic/services/: image_gererator.py  translation_service.py
src/pyfastic/static/css/: style.css
src/pyfastic/templates/: base.html  error.html
src/pyfastic/templates/home/: index.html
src/pyfastic/templates/images/: _image_card.html  _status_check.html  index.html
src/pyfastic/templates/loras/: index.html
src/pyfastic/templates/translations/: _status_check.html  _translation_result.html  index.html
src/pyfastic/utilities/: app_secrets.py
