[project]
name = "pyfastic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jan Jaap", email = "janjaap@siewers.org" }
]
requires-python = "==3.12.*"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "celery>=5.6.2",
    "fastapi[standard]>=0.135.1",
    "hatchling>=1.29.0",
    "jinja2>=3.1.6",
    "mflux>=0.17.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "redis>=7.3.0",
    "sqlalchemy[asyncio,asyncpg]>=2.0.48",
    "sqlmodel>=0.0.37",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
